[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-omnirun"
version = "0.1.0"
description = "LangChain integration for OmniRun sandboxes — execute code in isolated Firecracker microVMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.2",
    "omnirun>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "langchain>=0.2", "ruff>=0.6", "mypy>=1.10"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = false

# The private `omnirun` SDK is not published to PyPI, so no stubs are available
# in CI. Ignore only that import; the rest of the codebase is fully type-checked.
[[tool.mypy.overrides]]
module = "omnirun"
ignore_missing_imports = true
