[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-omnirun"
version = "0.1.0"
description = "LangChain integration for OmniRun sandboxes — execute code in isolated Firecracker microVMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1.4.8",
    "omnirun>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "langchain>=1.3.11", "ruff>=0.15.20", "mypy>=2.1.0"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = false

# The private `omnirun` SDK is not published to PyPI, so no stubs are available
# in CI. Ignore only that import; the rest of the codebase is fully type-checked.
[[tool.mypy.overrides]]
module = "omnirun"
ignore_missing_imports = true
